# jcalendar

./: LICENS  README.md  pyproject.toml
Jalali Calendar library/: jalali_calender.py
jcalender.egg-info/: PKG-INFO  SOURCES.txt
