[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Jalali Calender library"
version = "0.2.0"
authors = [
    {name = "Peyman Daei Reaei", email = "peimandaii2012@gmail.com"}
]
description = "Module for receiving information from the Tehran Stock Exchange"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/Peyman20122/Jalali-Calendar-library"
"Bug Tracker" =  "https://github.com/Peyman20122/Jalali-Calendar-library/issues"