[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jcalender"
version = "0.2.0"
authors = [
    {name = "Peyman Daei Reaei", email = "peimandaii2012@gmail.com"}
]
description = "This library is about the display of the Jalali calendar and the moon in Scorpio."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/Peyman20122/jcalendar"
"Bug Tracker" =  "https://github.com/Peyman20122/jcalendar/issues"